@@ -171,16 +171,6 @@ _index_box_auto_fill(Evas_Object *obj,
         evas_object_show(o);
 
         i++;
-        evas_object_smart_calculate(box); // force a calc so we know the size
-        evas_object_size_hint_min_get(box, &mw, &mh);
-        if (mh > h)
-          {
-             _index_box_clear(obj, box, level);
-             if (i > 0)
-               {
-                  // FIXME: only i objects fit! try again. overflows right now
-               }
-          }
 
         // ACCESS
         if ((it->level == 0) &&
@@ -510,7 +500,6 @@ _on_mouse_down(void *data,
    if (!sd->autohide_disabled)
      {
         _index_box_clear(data, sd->bx[1], 1);
-        _index_box_auto_fill(data, sd->bx[0], 0);
         elm_layout_signal_emit(data, "elm,state,active", "elm");
      }
    _sel_eval(data, ev->canvas.x, ev->canvas.y);
@@ -615,7 +604,6 @@ _on_mouse_in_access(void *data,
    if (!sd->autohide_disabled)
      {
         _index_box_clear(data, sd->bx[1], 1);
-        _index_box_auto_fill(data, sd->bx[0], 0);
         elm_layout_signal_emit(data, "elm,state,active", "elm");
      }
 }
@@ -926,7 +914,6 @@ _autohide_disabled_set(Eo *obj, void *_pd, va_list *list)
    if (sd->autohide_disabled)
      {
         _index_box_clear(obj, sd->bx[1], 1);
-        _index_box_auto_fill(obj, sd->bx[0], 0);
         elm_layout_signal_emit(obj, "elm,state,active", "elm");
      }
    else
@@ -1330,8 +1317,13 @@ _level_go(Eo *obj, void *_pd, va_list *list)
    int level = va_arg(*list, int);
    (void) level;
    Elm_Index_Smart_Data *sd = _pd;
+   _index_box_clear(obj, sd->bx[0], 0);
    _index_box_auto_fill(obj, sd->bx[0], 0);
-   if (sd->level == 1) _index_box_auto_fill(obj, sd->bx[1], 1);
+   if (sd->level == 1)
+     {
+        _index_box_clear(obj, sd->bx[1], 1);
+        _index_box_auto_fill(obj, sd->bx[1], 1);
+     }
 }
 
 EAPI void
