@@ -122,6 +122,7 @@ Fixes:
    * Added the min_year and max_year in the standard profile config.
    * Fix omitting signal emission when customized text parts change the text.
    * Fix "changed" signal being sent twice in case of toggle style when check is clicked.
+   * Fix index refill bug when autohide disabled.
 
 Removals:
 
